# the-24-600-spectral-bridge

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  requirements.txt
closure_transform_engine/: __init__.py  keystone.py
closure_transform_engine/examples/: run_wo007_schlafli_decomposition.py  run_wo008_keystone.py
closure_transform_engine/tests/: test_wo007_schlafli_decomposition.py  test_wo008_keystone_artifact.py
docs/: spectral_bridge_note.md  spectral_bridge_note.tex
docs/01-schlafli-decomposition/: README.md
docs/01-schlafli-decomposition/outputs/: wo007_reproducibility_log.txt
docs/02-spectral-bridge/: README.md
docs/02-spectral-bridge/outputs/: wo008_reproducibility_log.txt
docs/03-closure-projection-channel/: README.md  public_post_draft.md  v600_first_closure_projection_channel.md  v600_first_closure_projection_channel.tex  webpage_copy.md
docs/outputs/: wo008_reproducibility_log.txt
