[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-24-600-spectral-bridge"
version = "2.0.0"
description = "A two-paper reproducible exact-arithmetic programme on the 600-cell: the Schläfli decomposition (Paper 1) and the selective lambda=12 spectral bridge (Paper 2)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["closure_transform_engine", "closure_transform_engine.examples", "closure_transform_engine.tests", "vfd_v600"]

[tool.pytest.ini_options]
testpaths = ["closure_transform_engine/tests"]
